refactor: heavy reword to naming conventions

--- a/src/content/docs/foundations/standards/naming_conventions.mdx
+++ b/src/content/docs/foundations/standards/naming_conventions.mdx
@@ -2,40 +2,86 @@
 title: Naming Conventions
 ---
 
-Naming conventions are essential for maintaining consistency and readability in code. This section outlines various casing types used in programming, along with explanations, examples, and use cases.
+Naming conventions are like the unsung heroes of coding—they keep everything neat, tidy, and understandable. Whether you’re working solo or as part of a team, following consistent naming practices can make a huge difference in the readability and maintainability of your code. Let’s break down some common naming conventions you’ll encounter.
 
 ### Camel Case
 
-- **Explanation**: The first letter of the first word is lowercase, and the first letter of each subsequent word is capitalized.
+- **What It Is**: Start with a lowercase letter for the first word, and capitalize the first letter of each word that follows. No spaces or underscores here.
 - **Example**: `camelCaseExample`
-- **Use Case**: Commonly used for variable and function names in JavaScript.
+- **When to Use It**: This is your go-to for naming variables, functions, and methods in JavaScript. It’s a handy way to distinguish regular names from class names, which typically use a different convention.
+
+  ```javascript
+  let numberOfApples = 5;
+  function calculateTotalPrice(pricePerApple) {
+    return numberOfApples * pricePerApple;
+  }
+  ```
 
 ### Pascal Case
 
-- **Explanation**: The first letter of each word is capitalized.
+- **What It Is**: Every word starts with a capital letter, no exceptions.
 - **Example**: `PascalCaseExample`
-- **Use Case**: Often used for class names in languages like C# and Java.
+- **When to Use It**: Perfect for naming classes in languages like C# and Java. It helps distinguish class names from variables and methods.
+
+  ```csharp
+  public class ShoppingCart {
+      public void AddItem(Item item) {
+          // code here
+      }
+  }
+  ```
 
 ### Snake Case
 
-- **Explanation**: Words are separated by underscores, and all letters are typically lowercase.
+- **What It Is**: Words are all lowercase and separated by underscores.
 - **Example**: `snake_case_example`
-- **Use Case**: Commonly used in Python for variable names.
+- **When to Use It**: Python developers love this for naming variables and functions. It’s also common in other languages for similar uses.
+
+  ```python
+  number_of_apples = 5
+  def calculate_total_price(price_per_apple):
+      return number_of_apples * price_per_apple
+  ```
 
 ### Kebab Case
 
-- **Explanation**: Similar to snake case, but words are separated by hyphens.
+- **What It Is**: Words are all lowercase and separated by hyphens—think of it like snake case but with dashes.
 - **Example**: `kebab-case-example`
-- **Use Case**: Used in URLs and CSS class names.
+- **When to Use It**: You’ll see this in URLs and CSS class names. It’s a good way to keep things readable, especially in web development.
+
+  ```html
+  <div class="main-container">
+    <!-- content here -->
+  </div>
+  ```
 
 ### Upper Snake Case
 
-- **Explanation**: Similar to snake case, but all letters are uppercase.
+- **What It Is**: Similar to snake case, but everything is in uppercase.
 - **Example**: `UPPER_SNAKE_CASE`
-- **Use Case**: Used for constants in many programming languages.
+- **When to Use It**: Ideal for constants across many programming languages. The uppercase format makes it clear that the value should not change.
+
+  ```python
+  MAX_CONNECTIONS = 100
+  ```
 
 ### Train Case
 
-- **Explanation**: Similar to kebab case, but the first letter of each word is capitalized.
+- **What It Is**: Like kebab case, but with the first letter of each word capitalized. It’s less common, but you might see it in certain documentation or style guides.
 - **Example**: `Train-Case-Example`
-- **Use Case**: Occasionally used in documentation or specific naming conventions.
+- **When to Use It**: Occasionally used in documentation or in scenarios where you want to make names more readable without sticking to title case.
+
+## Best Practices
+
+Now that we’ve covered the basics, here are some quick tips to keep in mind when naming things in your code:
+
+- **Consistency Is Key**: Stick to one naming convention throughout your project. Mixing styles can get confusing fast.
+- **Be Descriptive**: Your names should give a good idea of what the variable, function, or class is doing. Don’t make people guess!
+- **Keep It Concise**: Long names can be hard to read, but short names that aren’t descriptive enough are just as bad. Find the right balance.
+- **Avoid Abbreviations**: Unless it’s a well-known abbreviation, spell things out. `calculateTotalPrice` is better than `calcTotPrice`.
+
+## Summary
+
+In a nutshell, using consistent naming conventions makes your code easier to read, understand, and maintain. Whether you’re using camel case for JavaScript variables, Pascal case for C# classes, or snake case in Python, sticking to these conventions is a surefire way to keep your codebase clean and your fellow developers happy.
+
+So, the next time you’re naming something in your code, remember these conventions, and keep it clear, concise, and consistent!
