fix: updates to principles

--- a/src/content/docs/foundations/principles/glossary.mdx
+++ b/src/content/docs/foundations/principles/glossary.mdx
@@ -26,8 +26,6 @@ A unique value in code that appears without explanation and could be replaced by
 
 The process of restructuring existing code to improve its readability, efficiency, or structure without changing its external behavior.
 
-SOLID Principles
-
 ### Class
 
 A blueprint for creating objects in object-oriented programming, defining the properties and behaviors that the objects created from it will have.
@@ -48,7 +46,29 @@ A design principle where a class is composed of one or more objects, rather than
 
 A contract in programming that defines a set of methods that a class must implement, promoting consistency and reusability across different parts of a system.
 
-Advanced Concepts and Considerations
+### Convention
+
+A standard or agreed-upon way of doing something, often used to ensure consistency in coding style.
+
+### Dependency
+
+A relationship between two pieces of code where one relies on the other to function.
+
+### Automated Testing
+
+The use of software tools to execute tests automatically, ensuring that code behaves as expected.
+
+### Latency
+
+The delay before a transfer of data begins following an instruction for its transfer.
+
+### Throughput
+
+The amount of data processed in a given amount of time.
+
+### Microservices
+
+An architectural style that structures an application as a collection of loosely coupled services.
 
 ### Vulnerability
 
