--- a/src/content/docs/foundations/principles/introduction_and_core_principles.mdx
+++ b/src/content/docs/foundations/principles/introduction_and_core_principles.mdx
@@ -115,6 +115,8 @@ KISS is all about simplicity. The idea is to keep your code as straightforward a
 
 DRY is all about avoiding repetition in your code. If you’re writing the same thing over and over, it’s time to step back and simplify. This reduces errors and makes updates easier.
 
+### Tips for Keeping It DRY
+
 - **Modularize Your Code**: Break your code into smaller, reusable pieces.
 
   ```javascript
@@ -169,7 +171,7 @@ DRY is all about avoiding repetition in your code. If you’re writing the same 
 
 YAGNI is about not overthinking things. Don’t add features or code until you actually need them. This keeps your project focused and manageable.
 
-Tips for Practicing YAGNI
+### Tips for Practicing YAGNI
 
 - **Build What’s Needed**: Focus on what the project needs right now, not what it might need later.
 
