--- a/src/content/docs/foundations/principles/coding_practices_and_patterns.mdx
+++ b/src/content/docs/foundations/principles/coding_practices_and_patterns.mdx
@@ -2,159 +2,151 @@
 title: Coding Practices and Patterns
 ---
 
-Effective coding practices and patterns are essential for creating software that is maintainable, scalable, and efficient. These practices help developers write code that is consistent, easy to understand, and adaptable to changing requirements. This section covers key practices such as following conventions, minimizing dependencies, and optimizing performance, which are crucial for both web and game development.
+Good coding practices and patterns are the backbone of creating software that’s easy to maintain, scale, and improve. They help keep your code clean, understandable, and adaptable to changes. Let’s dive into some essential practices that every developer, whether working on web apps or games, should keep in mind.
 
 ## Convention over Configuration
 
-The principle of Convention over Configuration suggests that developers should adhere to standard conventions, reducing the need for extensive configuration. This approach streamlines development and helps maintain consistency across projects.
+The idea here is simple: stick to standard conventions as much as possible. When everyone on the team follows the same rules, you spend less time configuring things and more time building cool stuff.
 
-- Follow standard coding conventions to minimize the need for detailed configuration.
-  - **Web Example**: Use a consistent naming convention for variables and functions across your web application.
-  - **Game Example**: Apply consistent naming and formatting rules in game scripts to ensure readability and maintainability.
+- **Stick to common conventions** to keep things consistent and reduce unnecessary setup.
+
+  - **Web Example**: Use the same naming style for variables and functions throughout your project.
+  - **Game Example**: Apply consistent naming and formatting in your game scripts to make them easier to read and manage.
 
 ## Law of Demeter (Principle of Least Knowledge)
 
-The Law of Demeter, also known as the Principle of Least Knowledge, states that a function should only interact with its immediate dependencies. This reduces the complexity of the code and minimizes the impact of changes.
+This principle, also known as the "Don’t Talk to Strangers" rule, suggests that a function should only interact with its direct dependencies. The less your code knows about other parts of the system, the easier it is to change and maintain.
 
-- Ensure that functions only interact with their immediate dependencies to reduce complexity.
+- **Keep functions focused** on their immediate dependencies to simplify your code.
 
-```javascript
-// Bad (Web)
-class User {
-  constructor(app) {
-    this.app = app;
+  ```javascript
+  // Bad (Web)
+  class User {
+    constructor(app) {
+      this.app = app;
+    }
+
+    getProfile() {
+      return this.app.database.getUserProfile(this);
+    }
   }
 
-  getProfile() {
-    return this.app.database.getUserProfile(this);
-  }
-}
+  // Good (Web)
+  class User {
+    constructor(database) {
+      this.database = database;
+    }
 
-// Good (Web)
-class User {
-  constructor(database) {
-    this.database = database;
-  }
-
-  getProfile() {
-    return this.database.getUserProfile(this);
-  }
-}
-
-// Bad (Game)
-class Player {
-  constructor(game) {
-    this.game = game;
+    getProfile() {
+      return this.database.getUserProfile(this);
+    }
   }
 
-  getScore() {
-    return this.game.scoreManager.getPlayerScore(this);
-  }
-}
+  // Bad (Game)
+  class Player {
+    constructor(game) {
+      this.game = game;
+    }
 
-// Good (Game)
-class Player {
-  constructor(scoreManager) {
-    this.scoreManager = scoreManager;
+    getScore() {
+      return this.game.scoreManager.getPlayerScore(this);
+    }
   }
 
-  getScore() {
-    return this.scoreManager.getPlayerScore(this);
+  // Good (Game)
+  class Player {
+    constructor(scoreManager) {
+      this.scoreManager = scoreManager;
+    }
+
+    getScore() {
+      return this.scoreManager.getPlayerScore(this);
+    }
   }
-}
-```
+  ```
 
 ## Continuous Feedback and Iteration
 
-Continuous feedback and iteration are key components of agile development. By regularly testing and updating code, developers can adapt to changes and improve software quality over time.
+In agile development, you’re constantly testing and tweaking your code to make sure it’s the best it can be. Regular feedback loops help you catch issues early and adapt quickly to new requirements.
 
-- Regularly test and update your code to adapt to changes and improve quality (agile development).
+- **Test and update your code regularly** to stay on top of changes and maintain high quality.
 
-  - Web Example: Use automated testing frameworks like Jest for JavaScript to run tests continuously during web development.
-  - Game Example: Implement playtesting sessions to gather feedback on game mechanics and user experience.
+  - **Web Example**: Use automated testing tools like Jest to continuously check your code as you develop.
+  - **Game Example**: Run playtesting sessions to get feedback on game mechanics and adjust accordingly.
 
 ## Robustness & Error Prevention
 
-Robustness refers to the ability of software to handle unexpected inputs gracefully. Error prevention strategies, such as input validation and automated testing, help ensure that software behaves reliably.
+Robustness is all about making sure your software can handle unexpected inputs without crashing. It’s like putting up safety nets so your program doesn’t break when something goes wrong.
 
-- Ensure your software can handle unexpected inputs gracefully.
+- **Build your software to handle unexpected situations gracefully**.
 
-```javascript
-// Web Example
-function processUserInput(input) {
-  if (typeof input !== "string") {
-    throw new Error("Invalid input type");
+  ```javascript
+  // Web Example
+  function processUserInput(input) {
+    if (typeof input !== "string") {
+      throw new Error("Invalid input type");
+    }
+    // process the input
   }
-  // process the input
-}
 
-// Game Example
-function processGameCommand(command) {
-  if (!command || typeof command !== "string") {
-    throw new Error("Invalid command");
+  // Game Example
+  function processGameCommand(command) {
+    if (!command || typeof command !== "string") {
+      throw new Error("Invalid command");
+    }
+    // execute command
   }
-  // execute command
-}
-```
+  ```
 
-- Implement strategies to prevent errors, such as input validation and automated testing.
+- **Prevent errors before they happen** with strategies like input validation and automated tests.
 
-  - Web Use Case: Use libraries like Joi for input validation in Node.js applications.
-  - Game Use Case: Use automated testing tools to verify game logic and mechanics.
+  - **Web Use Case**: Use a library like Joi for input validation in Node.js apps to catch issues early.
+  - **Game Use Case**: Set up automated tests to verify that your game logic works as expected.
 
 ## Performance Optimization
 
-Performance optimization involves writing efficient code that runs smoothly, especially in resource-intensive applications like games. This includes minimizing latency and maximizing throughput.
+Performance matters, especially in games where smooth operation is key. Writing efficient code means your software runs faster and uses resources more wisely.
 
-- Write small, focused functions to enhance code efficiency.
+- **Write small, focused functions** to keep your code efficient and manageable.
 
-```javascript
-// Web Example
-function calculateUserStats(users) {
-  // complex logic for multiple stats
-}
+  ```javascript
+  // Web Example
+  function calculateUserStats(users) {
+    // complex logic for multiple stats
+  }
 
-// Good
-function calculateUserScore(user) {
-  /* ... */
-}
-function calculateUserRank(user) {
-  /* ... */
-}
+  // Good
+  function calculateUserScore(user) {
+    /* ... */
+  }
+  function calculateUserRank(user) {
+    /* ... */
+  }
 
-// Game Example
-function calculateGameStats(players) {
-  // complex logic for multiple stats
-}
+  // Game Example
+  function calculateGameStats(players) {
+    // complex logic for multiple stats
+  }
 
-// Good
-function calculatePlayerScore(player) {
-  /* ... */
-}
-function calculatePlayerRank(player) {
-  /* ... */
-}
-```
+  // Good
+  function calculatePlayerScore(player) {
+    /* ... */
+  }
+  function calculatePlayerRank(player) {
+    /* ... */
+  }
+  ```
 
-- Optimize code for real-time performance, (**crucial in game development**).
+- **Optimize for real-time performance**, which is especially crucial in games.
 
-  - Web Use Case: Optimize database queries to reduce response times in web applications.
-  - Game Use Case: Use techniques like object pooling to manage resources efficiently in a game engine.
+  - **Web Use Case**: Make sure your database queries are efficient to keep response times low.
+  - **Game Use Case**: Use techniques like object pooling to manage resources in your game without slowing things down.
 
 ## Scalability
 
-Scalability refers to the ability of software to handle increased loads and grow without significant changes to the codebase. Modular design is key to achieving scalability.
+Scalability is about designing your software so it can grow and handle more users or data without requiring major changes. A modular design makes it easier to expand and adapt your project as it evolves.
 
-- Keep your code modular to handle growth and increased loads effectively.
+- **Keep your code modular** so it’s ready to grow with your project.
 
-  - Web Use Case: Use microservices architecture for web applications to scale individual components independently.
-  - Game Use Case: Design game systems as independent modules to allow for easy expansion and updates.
-
-## Glossary of Terms
-
-- **Convention**: A standard or agreed-upon way of doing something, often used to ensure consistency in coding style.
-- **Dependency**: A relationship between two pieces of code where one relies on the other to function.
-- **Automated Testing**: The use of software tools to execute tests automatically, ensuring that code behaves as expected.
-- **Latency**: The delay before a transfer of data begins following an instruction for its transfer.
-- **Throughput**: The amount of data processed in a given amount of time.
-- **Microservices**: An architectural style that structures an application as a collection of loosely coupled services.
+  - **Web Use Case**: Consider using microservices architecture to scale different parts of your web app independently.
+  - **Game Use Case**: Design your game systems as separate modules, making it easy to add new features or content later on.
