docs: add branch tags explanation

--- a/src/content/docs/foundations/version-control/branching.mdx
+++ b/src/content/docs/foundations/version-control/branching.mdx
@@ -30,6 +30,19 @@ Here’s how to keep your branches organized and easy to identify:
 3. Use **hyphens** to separate words in the description.
 4. Stick to **lowercase letters and hyphens**—it keeps things clean and easy to read.
 
+### What Do Those Branch Name Tags Mean?
+
+- `feature/`: For developing new features or functionality.
+- `bugfix/`: For fixing identified bugs or issues in the code.
+- `hotfix/`: For urgent fixes, typically applied directly to production.
+- `release/`: For preparing and stabilizing code for a new release.
+- `chore/`: For routine tasks, maintenance, or housekeeping that don't directly affect functionality.
+- `improvement/`: For enhancing existing features or optimizing performance.
+- `experiment/`: For trying out new ideas or concepts, not necessarily for production.
+- `docs/`: For adding or updating documentation.
+- `refactor/`: For restructuring existing code without changing its external behavior.
+- `test/`: For adding or updating tests.
+
 ## Creating and Switching Branches
 
 ### How to Create a New Branch
